Fixed font size on login page, to make it more readable

--- a/BestilNemt/WebClient/Content/Site.css
+++ b/BestilNemt/WebClient/Content/Site.css
@@ -228,7 +228,3 @@ input[type="password"] {
     transition: border-color ease-in-out 0.15s, box-shadow ease-in-out 0.15s;
     text-align:center
 }
-
-.PasswordField {
-    position: relative;
-}
